--- a/package.json
+++ b/package.json
@@ -2,14 +2,18 @@
   "name": "signup-page",
   "version": "0.1.0",
   "main": "/src/index.js",
+  "homepage": "https://ali80-sys.github.io/signup-page/",
   "dependencies": {
     "antd": "^4.18.5",
+    "gh-pages": "^3.2.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.0",
     "sass": "^1.49.7"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
